--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -944,7 +944,11 @@
       "DIALOG_TAB_INTRODUCTION_ITEM_4": "You cannot restart idea gathering once it's closed",
       "DIALOG_TAB_INTRODUCTION_ITEM_5": "Participants can still favourite, reply to and report ideas",
       "DIALOG_TAB_INTRODUCTION_ITEM_6": "You can still add a voting system and action updates",
-      "DIALOG_TAB_INTRODUCTION_INFO": "This is the next stage of your topic. You can now discuss the collected ideas, before moving on to voting or action.",
+      "DIALOG_TAB_INTRODUCTION_INFO": "This is the next stage of your topic. You can now have a pro-con discussion on something, before moving on to voting or action.",
+      "SETTINGS_HEADING_DISCUSSION_QUESTION": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_QUESTION",
+      "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_QUESTION_DESC",
+      "SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER": "@:VIEWS.TOPIC_CREATE.SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER",
+      "SETTINGS_HEADING_DISCUSSION_DEADLINE": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "BTN_CONTINUE":"Continue",
       "BTN_START_DISCUSSION": "Start discussion phase"
@@ -1246,8 +1250,8 @@
       "NO_ARGUMENTS_BTN_ADD": "Add argument",
       "NO_ARGUMENTS_BTN_START_DISCUSSION": "@:COMPONENTS.TOPIC_DISCUSSION_CREATE.BTN_START_DISCUSSION",
       "NO_ARGUMENTS_DESC_HEADING": "How discussions work",
-      "NO_ARGUMENTS_DESC_BEFORE": "In discussions, participants can add pro or con arguments, and other participants can reply or react to these. The general sentiment of the discussion is shown visually.",
-      "NO_ARGUMENTS_DESC_AFTER": "Arguments can be favourited or recognised as including proof.",
+      "NO_ARGUMENTS_DESC_BEFORE": "In the discussion phase, topic admins can post one discussion question, on a matter related to the topic or ideas.",
+      "NO_ARGUMENTS_DESC_AFTER": "Participants can add pro or con arguments in response to this question, and other participants can reply or react to these. The general sentiment of the discussion is shown visually.",
       "NO_ARGUMENTS_DESC_INFO": "There is currently no discussion phase for this topic, but topic admins can start one once the idea gathering ends.",
       "NO_ARGUMENTS_DESC_PARTICIPANTS": "The discussion is open, but no-one has posted any arguments yet. Be bold and be the first to post one!",
       "NO_ARGUMENTS_DESC_ADMIN": "No-one has posted any arguments yet. As topic admin, get the discussion flowing by posting some yourself!"
@@ -2603,7 +2607,7 @@
       "TOOLTIP_GROUP_PERMISSIONS_CONTENT": "This will give all members of the group the selected level of permissions to the topic, unless you individually assign them a different permissions level from the topic's 'manage participants' section",
       "HEADING_ACTIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_ACTIONS",
       "SETTINGS_HEADING_DISCUSSION_QUESTION": "Discussion question",
-      "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "Please add a specific discussion question to bring focus for the participants.",
+      "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "Please add a specific discussion question to bring focus for the participants. You can only post one discussion question per topic. Participants can respond with pro, con or informational arguments.",
       "SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER": "Question",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE": "Discussion deadline",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "You can opt to include a deadline, which will close the discussion automatically when reached. You can always edit the deadline, or manually close the discussion at any time.",
