--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2869,7 +2869,7 @@
       "TXT_QR_CODE_FOOTER_SCAN_CODE": "Jump right into the topic <b>{{topicTitle}}</b> by scanning this QR code!",
       "INLINE_COMMENT_SUGGEST_CHANGE": "Suggested change from \"{{changeFrom}}\" to \"{{changeTo}}\"",
       "BTN_FEEDBACK_OPEN": "Help us improve",
-      "OPTION_FAVOURITE": "Favourite",
+      "OPTION_FAVOURITE": "Save to favourites",
       "OPTION_UNFAVOURITE": "Un-favourite",
       "OPTION_TOPIC_NOTIFICATIONS": "Topic notifications",
       "OPTION_INVITE_CO_EDITOR": "Invite co-creator",
