--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -466,7 +466,7 @@
       "OPTION_REPORT": "@:COMPONENTS.IDEABOX.OPTION_REPORT",
       "OPTION_REMOVE": "@:COMPONENTS.IDEABOX.OPTION_REMOVE",
       "REPLIES": "@:COMPONENTS.IDEABOX.REPLIES",
-      "FOLDERS": "Added to {{folders}}",
+      "FOLDERS": "Added to: ",
       "FOLDERS_MORE": "+ {{count}} more"
     },
     "IDEA_REPLY_FORM": {
