--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2671,7 +2671,7 @@
       "BTN_ACTIVITIES": "Topic activity",
       "LBL_JOINED": "Joined topic",
       "TAB_FOLLOW_UP": "Action",
-      "TOOLTIP_FAVOURITE": "Save this topic to your personal favourites",
+      "TOOLTIP_FAVOURITE": "Save topic to your personal favourites",
       "TAB_INFO_TITLE_DRAW": "Looks like your voting process resulted in a draw.",
       "TAB_INFO_DRAW_DESCRIPTION": "Sometimes having several winning options is a good thing, but there are times when you really just need one clear winner.",
       "TAB_INFO_TITLE_DRAW_WHAT_NOW": "Here's what you could do now:",
