--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -445,6 +445,7 @@
       "TOOLTIP_LIKE": "Click to show your approval for this idea",
       "TOOLTIP_LIKE_COUNT": "See who approved of this idea",
       "TOOLTIP_FAVOURITE": "Save idea to your personal favourites",
+      "TOOLTIP_SAVED_TO_FAVOURITE": "Idea saved to your personal favourites",
       "OPTION_VIEW_PREVIOUS_VERSIONS": "View previous versions",
       "OPTION_ADD_TO_FOLDER": "Add to folder",
       "OPTION_REPORT": "Report to admin",
@@ -2672,6 +2673,7 @@
       "LBL_JOINED": "Joined topic",
       "TAB_FOLLOW_UP": "Action",
       "TOOLTIP_FAVOURITE": "Save topic to your personal favourites",
+      "TOOLTIP_TOPIC_SAVED_TO_FAVOURITE": "Topic saved to your personal favourites",
       "TAB_INFO_TITLE_DRAW": "Looks like your voting process resulted in a draw.",
       "TAB_INFO_DRAW_DESCRIPTION": "Sometimes having several winning options is a good thing, but there are times when you really just need one clear winner.",
       "TAB_INFO_TITLE_DRAW_WHAT_NOW": "Here's what you could do now:",
