--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -174,7 +174,7 @@
       "HEADING": "Report argument to admin",
       "MESSAGE_MAIN": "You are reporting",
       "LABLE_REASON": "Reason for reporting *",
-      "PLACEHOLDER_REPORT_TEXT": "Explain why you found this argument inappropriate...",
+      "PLACEHOLDER_REPORT_TEXT": "Explain, why you found this argument inappropriate...",
       "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
       "BTN_SUBMIT": "Report to admin",
       "BTN_CANCEL": "@:LNK_CANCEL"
@@ -718,7 +718,7 @@
       "HEADING": "Report topic",
       "MESSAGE_MAIN": "@:COMPONENTS.ARGUMENT_REPORT.MESSAGE_MAIN",
       "LABLE_REASON": "@:COMPONENTS.ARGUMENT_REPORT.LABLE_REASON",
-      "PLACEHOLDER_REPORT_TEXT": "Explain why you found this argument inappropriate...",
+      "PLACEHOLDER_REPORT_TEXT": "Explain, why you found this argument inappropriate...",
       "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
       "BTN_SUBMIT": "Report to admin",
       "BTN_CANCEL": "@:LNK_CANCEL"
@@ -1458,7 +1458,7 @@
     "TOPIC_ARGUMENT_REPORT_DESCRIPTION": "Argument by participant {{usersFullName}}",
     "TOPIC_ARGUMENT_REPORT_LABEL_REASON": "Reason for reporting",
     "TOPIC_ARGUMENT_REPORT_LABEL_REASON_REQUIRED": "(required)",
-    "TOPIC_ARGUMENT_REPORT_PLACEHOLDER_REPORT_TEXT": "Explain why you found this argument inappropriate...",
+    "TOPIC_ARGUMENT_REPORT_PLACEHOLDER_REPORT_TEXT": "Explain, why you found this argument inappropriate...",
     "TOPIC_ARGUMENT_REPORT_TXT_ARE_YOU_SURE": "Are you sure you want to report this argument? You cannot undo this action.",
     "TOPIC_ARGUMENT_REPORT_BTN_YES": "Yes, report this argument",
     "TOPIC_ARGUMENT_REPORT_BTN_NO": "No, I changed my mind",
@@ -1995,7 +1995,7 @@
       "FEATURE_IDEATION_HEADING": "Gather ideas",
       "FEATURE_IDEATION_ITEM_1": "Create and co-edit a topic text",
       "FEATURE_IDEATION_ITEM_2": "Invite and share with participants",
-      "FEATURE_IDEATION_ITEM_3": "Participants can share ideas and comment on each others'",
+      "FEATURE_IDEATION_ITEM_3": "Participants can share ideas and comment on each other's",
       "FEATURE_IDEATION_ITEM_4": "Idea popularity can be measured via 'likes'",
       "FEATURE_IDEATION_FOOTER_INFO": "After gathering ideas you can move the topic into a discussion and/or voting and action phase.",
       "FEATURE_IDEATION_FOOTER_BTN": "Start idea gathering",
@@ -2653,7 +2653,7 @@
       "HELP_NEXT_DESCRIPTION": "What can you do when the topic is published?",
       "HELP_LNK_LEARN_MORE": "Learn more about topics",
       "HELP_ITEM_SHARE_AND_INVITE": "Share & invite participants",
-      "HELP_ITEM_ENGAGE_IN_DISCUSSION": "Engage in a pro-con discussion",
+      "HELP_ITEM_ENGAGE_IN_DISCUSSION": "Engage in a pro/con discussion",
       "HELP_ITEM_ADD_IDEATION": "Add idea gathering to start collecting ideas",
       "HELP_ITEM_ADD_VOTING": "Add voting to start collecting votes",
       "HELP_ITEM_ADD_FOLLOW_UP": "Add an action phase to keep participants up to date on any progress made.",
