--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2169,7 +2169,7 @@
       "HEADING": "Create a topic starting with idea gathering",
       "CREATE_TAB_1": "@:VIEWS.VOTE_CREATE.CREATE_TAB_1",
       "CREATE_TAB_2": "@:VIEWS.VOTE_CREATE.CREATE_TAB_2",
-      "CREATE_TAB_3": "idea gathering",
+      "CREATE_TAB_3": "Idea gathering",
       "CREATE_TAB_4": "@:VIEWS.VOTE_CREATE.CREATE_TAB_4",
       "TITLE_HEADER_IMAGE": "@:VIEWS.TOPIC_CREATE.TITLE_HEADER_IMAGE",
       "TITLE_HEADING": "@:VIEWS.TOPIC_CREATE.TITLE_HEADING",
