--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -736,7 +736,7 @@
     },
     "TOPIC_IDEATION": {
       "TAB_IDEAS": "Ideas: {{count}}",
-      "LBL_DEADLINE": "Ideation phase deadline",
+      "LBL_DEADLINE": "Idea gathering phase deadline",
       "TAB_FOLDERS": "Folders: {{count}}",
       "BTN_ADD_IDEAS_TO_FOLDER": "Add ideas to folder",
       "BTN_ADD_YOUR_IDEA": "Add your idea",
