--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -788,7 +788,7 @@
       "DASHBOARD_STEP_1_TITLE": "Create actions",
       "DASHBOARD_STEP_1_DESC": "Quickly create a new topic for idea gathering, pro-con discussion or voting, or set up a new group.",
       "DASHBOARD_STEP_2_TITLE": "Main menu",
-      "DASHBOARD_STEP_2_DESC": "The main menu serves as your main navigation through the platform. There are quick links to all your topics based on their current phase, i.e. idea gathering, discussion or voting, discussion, voting, or action, as well as to any groups you're a member of.",
+      "DASHBOARD_STEP_2_DESC": "The main menu serves as your main navigation through the platform. There are quick links to all your topics based on their current phase, i.e. idea gathering, discussion, voting or action phase, as well as to any groups you're a member of.",
       "DASHBOARD_STEP_2_DESC2": "You can also access your profile, change the language, or go to the Help Centre.",
       "DASHBOARD_STEP_3_TITLE": "Activity feed",
       "DASHBOARD_STEP_3_DESC": "Find all your new activity here – new ideas, arguments, voting updates, action posts and more. You can open and close the activity feed whenever you want.",
