--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1040,6 +1040,7 @@
       "BTN_REJECT": "Reject"
     },
     "TOPIC_VOTE_CAST": {
+      "CAST_YOUR_VOTE": "@:VIEWS.TOPICS_TOPICID.VOTE_CAST_YOUR_VOTE",
       "PREVIEW_VOTE_TYPE_REGULAR": "@:COMPONENTS.TOPIC_VOTE_CREATE.PREVIEW_VOTE_TYPE_REGULAR",
       "TXT_YOU_CAN_CHOOSE_OPTIONS": "@:VIEWS.TOPICS_TOPICID.TXT_YOU_CAN_CHOOSE_OPTIONS",
       "LBL_OPTION_YES": "@:COMPONENTS.TOPIC_VOTE_CREATE.LBL_OPTION_YES",
