--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3040,6 +3040,8 @@
     }
   },
   "ACTIVITY_FEED": {
+    "ACTIVITY_USER_CREATE_DISCUSSION_TOPIC": "User <em>{{userName}}</em> has started discussion for topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_DISCUSSION_TOPIC": "User <em>{{userName}}</em> has updated the discussion of topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_CREATE_IDEATION_TOPIC": "User <em>{{userName}}</em> has opened idea gathering for topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_IDEATION_TOPIC": "User <em>{{userName}}</em> has updated the idea gathering deadline of topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_CREATE_IDEA_IDEATION": "User <em>{{userName}}</em> has added a new idea to the idea gathering in topic: <em>{{topicTitle}}</em>",
