--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -742,7 +742,7 @@
       "BTN_ADD_YOUR_IDEA": "Add your idea",
       "IDEA_FILTER_TYPE": "Idea type",
       "HEADING_IDEATION_ENDED": "The idea gathering has ended!",
-      "TXT_IDEATION_ENDED": "The idea gathering has been closed. You can no longer add, edit or upvote ideas, but you can still read, reply and favourite them.",
+      "TXT_IDEATION_ENDED": "The idea gathering has been closed. You can no longer add, edit or like ideas, but you can still read, reply and save them.",
       "OPT_ADD_DEADLINE": "@:COMPONENTS.TOPIC_VOTE_CAST.OPT_ADD_DEADLINE",
       "OPT_EDIT_DEADLINE": "@:MODALS.TOPIC_SETTINGS_BTN_EDIT_DEADLINE",
       "OPT_EDIT_IDEATION": "Edit idea gathering",
