--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3058,6 +3058,7 @@
     "ACTIVITY_USER_ADD_REPORT_IDEA_COMMENT": "User <em>{{userName}}</em> has reported a reply for idea: ",
     "ACTIVITY_MODERATOR_UPDATE_COMMENT_IDEA": "User <em>{{userName}}</em> (moderator) has updated the idea reply field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_CREATE_FOLDER_IDEATION": "User <em>{{userName}}</em> has added a folder to the idea gathering in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_DELETE_FOLDER_IDEATION": "User <em>{{userName}}</em> has removed a folder from the idea gathering in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_FOLDER": "User <em>{{userName}}</em> has updated a folder in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_DELETE_FOLDER": "User <em>{{userName}}</em> has removed a folder from topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_FOLDERIDEA_FOLDER": "User <em>{{userName}}</em> has added an idea to a folder in topic <em>{{topicTitle}}</em>",
