--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -960,6 +960,7 @@
       "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_QUESTION_DESC",
       "SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER": "@:VIEWS.TOPIC_CREATE.SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE",
+      "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "BTN_CONTINUE":"Continue",
       "BTN_START_DISCUSSION": "Start discussion phase"
