--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1025,7 +1025,7 @@
       "MILESTONE_TITLE": "@:VIEWS.TOPICS_TOPICID.ADD_MILESTONES_MILESTONE"
     },
     "TOPIC_ONBOARDING": {
-      "TITLE": "Topics look (and work) a bit differently since the update",
+      "TITLE": "@:VIEWS.TOPICS_TOPICID.TUTORIAL_TITLE",
       "DESCRIPTION": "@:VIEWS.TOPICS_TOPICID.TUTORIAL_DESC",
       "TAKE_A_TOUR": "@:COMPONENTS.ONBOARDING.TAKE_A_TOUR",
       "BTN_SUBMIT": "@:COMPONENTS.ONBOARDING.BTN_SUBMIT",
