--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -949,7 +949,7 @@
       "DIALOG_TAB_2": "Settings",
       "DIALOG_TAB_INTRODUCTION_ARE_YOU_SURE": "Are you sure you want to start the topic discussion?",
       "DIALOG_TAB_INTRODUCTION_KEEP_IN_MIND": "Things to keep in mind:",
-      "DIALOG_TAB_INTRODUCTION_ITEM_1": "Participants can no longer add, edit or upvote ideas",
+      "DIALOG_TAB_INTRODUCTION_ITEM_1": "Participants can no longer add, edit or like ideas",
       "DIALOG_TAB_INTRODUCTION_ITEM_2": "You can still add ideas to folder",
       "DIALOG_TAB_INTRODUCTION_ITEM_3": "You can still invite and share with participants",
       "DIALOG_TAB_INTRODUCTION_ITEM_4": "You cannot restart idea gathering once it's closed",
@@ -1094,7 +1094,7 @@
       "DIALOG_TAB_INTRODUCTION_ITEM_4": "Participants can submit their vote",
       "DIALOG_TAB_INTRODUCTION_ITEM_5": "You can't edit a vote once you have started it",
       "DIALOG_TAB_INTRODUCTION_ITEM_6": "You can only start one vote per topic",
-      "DIALOG_TAB_INTRODUCTION_ITEM_7": "Participants can no longer add, edit or upvote ideas",
+      "DIALOG_TAB_INTRODUCTION_ITEM_7": "Participants can no longer add, edit or like ideas",
       "DIALOG_TAB_INTRODUCTION_ITEM_8": "You cannot restart idea gathering once it's closed",
       "DIALOG_TAB_INTRODUCTION_INFO": "From here you can move the topic into action.",
       "VOTE_QUESTION_HEADING": "Please add a specific question for the participants to vote on.",
@@ -3046,7 +3046,7 @@
     "ACTIVITY_USER_UPDATE_IDEATION_TOPIC": "User <em>{{userName}}</em> has updated the idea gathering deadline of topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_CREATE_IDEA_IDEATION": "User <em>{{userName}}</em> has added a new idea to the idea gathering in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_DELETE_IDEA_IDEATION": "User <em>{{userName}}</em> has removed their idea in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_CREATE_IDEAVOTE_IDEA": "User <em>{{userName}}</em> has upvoted idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_IDEAVOTE_IDEA": "User <em>{{userName}}</em> has liked an idea in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_DELETE_IDEAVOTE_IDEA": "User <em>{{userName}}</em> has removed their vote for an idea in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_REPORT_IDEA": "User <em>{{userName}}</em> has reported an idea!",
     "ACTIVITY_USER_UPDATE_IDEA": "User <em>{{userName}}</em> has updated their idea in topic: <em>{{topicTitle}}</em>",
