--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3057,18 +3057,18 @@
     "ACTIVITY_MODERATOR_DELETE_IDEA": "User <em>{{userName}}</em> (moderator) has deleted an idea for topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_REPORT_IDEA_COMMENT": "User <em>{{userName}}</em> has reported a reply for idea: ",
     "ACTIVITY_MODERATOR_UPDATE_COMMENT_IDEA": "User <em>{{userName}}</em> (moderator) has updated the idea reply field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_CREATE_FOLDER_IDEATION": "User <em>{{userName}}</em> has added a folder to the idea gathering in topic <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_FOLDER": "User <em>{{userName}}</em> has updated a folder in topic <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_DELETE_FOLDER": "User <em>{{userName}}</em> has removed a folder from topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_FOLDER_IDEATION": "User <em>{{userName}}</em> has created an ideas folder in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_FOLDER": "User <em>{{userName}}</em> has updated an ideas folder in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_DELETE_FOLDER": "User <em>{{userName}}</em> has removed an ideas folder from topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_FOLDERIDEA_FOLDER": "User <em>{{userName}}</em> has added an idea to a folder in topic <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_CREATE_TOPIC": "User <em>{{userName}}</em> has created a topic <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_TOPIC": "User <em>{{userName}}</em> has updated a field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_TOPIC": "User <em>{{userName}}</em> has created a topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_TOPIC": "User <em>{{userName}}</em> has updated the field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_TOPIC_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have updated topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_TOPIC_USERACTIVITYGROUP": "User <em>{{userName}}</em> has made <em>{{groupCount}}</em> updates to topic <em>{{topicTitle}}</em>",
     "ACTIVITY_PREVIOUS_VERSION": "Previous version: {{previousValue}}",
     "ACTIVITY_NEW_VERSION": "New version: {{newValue}}",
-    "ACTIVITY_SYSTEM_UPDATE_TOPIC": "System has updated a field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_DELETE_TOPIC": "User <em>{{userName}}</em> has deleted a topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_SYSTEM_UPDATE_TOPIC": "System has updated the field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_DELETE_TOPIC": "User <em>{{userName}}</em> has deleted topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_USER_TOPIC": "User <em>{{userName}}</em> has invited user <em>{{userName2}}</em> to participate in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_USER_TOPIC_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have invited users to participate in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_USER_TOPIC_USERACTIVITYGROUP": "User <em>{{userName}}</em> has invited <em>{{groupCount}}</em> users to participate in topic <em>{{topicTitle}}</em>",
