--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2611,10 +2611,10 @@
       "SETTINGS_COUNTRY_SELECT": "@:VIEWS.GROUP_CREATE.SETTINGS_COUNTRY_SELECT",
       "SETTINGS_LANGUAGE_SELECT": "@:VIEWS.GROUP_CREATE.SETTINGS_LANGUAGE_SELECT",
       "SETTINGS_HEADING_ADD_TO_GROUP": "Add to group",
-      "SETTINGS_ADD_TO_GROUP_DESC": "You can add this topic to a group for which you have admin rights, either now or later. All topics in a group are shared with its members, and can be shared via the group's public link too.",
+      "SETTINGS_ADD_TO_GROUP_DESC": "You can add this topic to a group you're part of, either now or later. All topics in a group are shared with its members, and can be shared via the group's public link too. To add topics to a group, you'll need to have the correct rights",
       "SETTINGS_GROUP_SELECT": "Choose a group",
-      "NO_GROUPS_HEADING": "You haven’t joined any groups yet",
-      "NO_GROUPS_DESCRIPTION": "Once you’ve joined a group, you can add this topic to it. Don’t worry, you can skip this now and still do it later.",
+      "NO_GROUPS_HEADING": "No groups to add yet",
+      "NO_GROUPS_DESCRIPTION": "Once you're part of a group and have the correct rights, you can add this topic to it here. Don’t worry, you can skip this now and still do it later",
       "GROUPS_LIST_TITLE": "@:VIEWS.GROUP_CREATE.INFO_SETTINGS_INPUT_NAME",
       "HEADING_GROUP_PERMISSIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
       "TOOLTIP_GROUP_PERMISSIONS_TITLE": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
