--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1135,7 +1135,7 @@
       "LBL_OPTION_AUTH_HARD_ID": "Hard voting (only in Estonia for now)",
       "LBL_OPTION_AUTH_HARD_ID_DESC": "Voters will have to use e-ID to cast their vote. Vote signatures can be downloaded at the end.",
       "LBL_VOTE_DELEGATION": "Vote delegation",
-      "LBL_VOTE_DELEGATION_DESC": "Allow users to pass on their voting right. The delegee to won't be informed, but their vote will be counted twice. The delegator won't see how the delegee voted.",
+      "LBL_VOTE_DELEGATION_DESC": "Allow users to pass on their voting right. The delegee won't be informed, but their vote will be counted twice. The delegator won't see how the delegee voted.",
       "LBL_OPTION_DELEGATION": "Enable delegation",
       "LBL_OPTION_DELEGATION_DESC": "Allow users to pass on their voting right.",
       "LBL_DEADLINE": "Vote deadline",
