--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -235,9 +235,9 @@
     },
     "CLOSE_IDEATION_CONFIRM": {
       "HEADING": "End idea gathering",
-      "ARE_YOU_SURE": "Are you sure you want to end the idea gathering? It will no longer be possible for ideas to be added. You cannot undo this action.",
-      "CONFIRM_YES": "Yes, end the idea gathering",
-      "CONFIRM_NO": "No, keep the idea gathering open"
+      "ARE_YOU_SURE": "Are you sure you want to end this idea gathering? Participants will no longer be able to add, edit or like ideas, but can still read, reply and favourite them.",
+      "CONFIRM_YES": "Yes, end idea gathering",
+      "CONFIRM_NO": "No, keep it open"
     },
     "CLOSE_VOTING_CONFIRM": {
       "HEADING": "Close voting",
