--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2221,11 +2221,13 @@
       "SETTINGS_HEADING_ADD_TO_GROUP": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_ADD_TO_GROUP",
       "SETTINGS_ADD_TO_GROUP_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_ADD_TO_GROUP_DESC",
       "SETTINGS_GROUP_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_GROUP_SELECT",
+      "SETTINGS_GROUP_SELECT_ALL_ADDED": "@:VIEWS.TOPIC_CREATE.SETTINGS_GROUP_SELECT_ALL_ADDED",
       "MEMBER_GROUP_HEADING_TITLE": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_TITLE",
       "MEMBER_GROUP_HEADING_GROUP_PERMISSIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
       "MEMBER_GROUP_HEADING_ACTIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_ACTIONS",
       "NO_GROUPS_HEADING": "@:VIEWS.TOPIC_CREATE.NO_GROUPS_HEADING",
       "NO_GROUPS_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.NO_GROUPS_DESCRIPTION",
+      "SETTINGS_HEADING_GROUP_LIST": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_GROUP_LIST",
       "SETTINGS_HEADING_IDEATION_QUESTION": "Idea gathering question",
       "SETTINGS_HEADING_IDEATION_QUESTION_DESC": "Please add a specific idea gathering question to bring focus for the participants.",
       "SETTINGS_IDEATION_QUESTION_PLACEHOLDER": "Question",
@@ -2632,8 +2634,10 @@
       "SETTINGS_HEADING_ADD_TO_GROUP": "Add to group",
       "SETTINGS_ADD_TO_GROUP_DESC": "You can add this topic to a group you're part of, either now or later. All topics in a group are shared with its members, and can be shared via the group's public link too. To add topics to a group, you'll need to have the correct rights",
       "SETTINGS_GROUP_SELECT": "Choose a group",
+      "SETTINGS_GROUP_SELECT_ALL_ADDED": "All groups you have admin rights for have already been added",
       "NO_GROUPS_HEADING": "No groups to add to yet",
       "NO_GROUPS_DESCRIPTION": "Once you're part of a group and have the correct rights, you can add this topic to it here. Don’t worry, you can skip this now and still do it later",
+      "SETTINGS_HEADING_GROUP_LIST": "Groups you're adding this topic to:",
       "GROUPS_LIST_TITLE": "@:VIEWS.GROUP_CREATE.INFO_SETTINGS_INPUT_NAME",
       "HEADING_GROUP_PERMISSIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
       "TOOLTIP_GROUP_PERMISSIONS_TITLE": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
@@ -3005,11 +3009,13 @@
       "SETTINGS_HEADING_ADD_TO_GROUP": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_ADD_TO_GROUP",
       "SETTINGS_ADD_TO_GROUP_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_ADD_TO_GROUP_DESC",
       "SETTINGS_GROUP_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_GROUP_SELECT",
+      "SETTINGS_GROUP_SELECT_ALL_ADDED": "@:VIEWS.TOPIC_CREATE.SETTINGS_GROUP_SELECT_ALL_ADDED",
       "MEMBER_GROUP_HEADING_TITLE": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_TITLE",
       "MEMBER_GROUP_HEADING_GROUP_PERMISSIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
       "MEMBER_GROUP_HEADING_ACTIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_ACTIONS",
       "NO_GROUPS_HEADING": "@:VIEWS.TOPIC_CREATE.NO_GROUPS_HEADING",
       "NO_GROUPS_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.NO_GROUPS_DESCRIPTION",
+      "SETTINGS_HEADING_GROUP_LIST": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_GROUP_LIST",
       "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point prior to starting the vote.",
       "BTN_READ_MORE": "@:VIEWS.TOPIC_CREATE.BTN_READ_MORE",
       "BTN_READ_LESS": "@:VIEWS.TOPIC_CREATE.BTN_READ_LESS",
@@ -3075,7 +3081,7 @@
     "ACTIVITY_MODERATOR_UPDATE_IDEA": "User <em>{{userName}}</em> (moderator) has updated the idea field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_MODERATOR_DELETE_IDEA": "User <em>{{userName}}</em> (moderator) has deleted an idea for topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_REPORT_IDEA_COMMENT": "User <em>{{userName}}</em> has reported a reply for idea: ",
-    "ACTIVITY_MODERATOR_UPDATE_COMMENT_IDEA": "User <em>{{userName}}</em> (moderator) has updated the idea reply field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_MODERATOR_UPDATE_COMMENT_IDEA": "User <em>{{userName}}</em> (moderator) has updated the idea reply in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_DELETE_FOLDER_IDEATION": "User <em>{{userName}}</em> has removed a folder from the idea gathering in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_CREATE_FOLDER_IDEATION": "User <em>{{userName}}</em> has created an ideas folder in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_FOLDER": "User <em>{{userName}}</em> has updated an ideas folder in topic <em>{{topicTitle}}</em>",
