--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2641,9 +2641,10 @@
       "NO_GROUPS_DESCRIPTION": "Once you're part of a group and have the correct rights, you can add this topic to it here. Don’t worry, you can skip this now and still do it later",
       "SETTINGS_HEADING_GROUP_LIST": "Groups you're adding this topic to:",
       "GROUPS_LIST_TITLE": "@:VIEWS.GROUP_CREATE.INFO_SETTINGS_INPUT_NAME",
-      "HEADING_GROUP_PERMISSIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
+      "HEADING_GROUP_PERMISSIONS": "Group permissions for topic access",
       "TOOLTIP_GROUP_PERMISSIONS_TITLE": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
-      "TOOLTIP_GROUP_PERMISSIONS_CONTENT": "This will give all members of the group the selected level of permissions to the topic, unless you individually assign them a different permissions level from the topic's 'manage participants' section",
+      "TOOLTIP_GROUP_PERMISSIONS_CONTENT": "This will give all members of the group the selected role within the topic, unless you individually assign them a different role from the topic's 'manage participants' section.",
+      "TOOLTIP_GROUP_PERMISSIONS_CONTENT_PERMISSIONS_DESC": "<b>Admins</b> can access all settings to manage the topic. <b>Editors</b> can edit the topic content (text, images, attachments) and the tags (categories, language, location). <b>Participants</b> can participate in whichever topic phase is open.",
       "HEADING_ACTIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_ACTIONS",
       "SETTINGS_HEADING_DISCUSSION_QUESTION": "Discussion question",
       "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "Please add a specific discussion question to bring focus for the participants. You can only post one discussion question per topic. Participants can respond with pro, con or informational arguments.",
