--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2220,7 +2220,8 @@
       "TOOLTIP_TOPIC_INTRO_CONTENT": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_INTRO_CONTENT",
       "TITLE_INTRO_TEXT": "@:VIEWS.TOPIC_CREATE.TITLE_INTRO_TEXT",
       "TITLE_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION",
-      "TITLE_DESCRIPTION_TEXT": "@:VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION_TEXT",
+      "TOOLTIP_TOPIC_TEXT_TITLE": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_TEXT_TITLE",
+      "TOOLTIP_TOPIC_TEXT_CONTENT": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_TEXT_CONTENT",
       "BTN_SECTION_ADD": "@:VIEWS.TOPIC_CREATE.BTN_SECTION_ADD",
       "SETTINGS_HEADING_VISIBILITY": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_VISIBILITY",
       "SETTINGS_VISIBILITY_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_DESC",
@@ -2625,7 +2626,8 @@
       "TOOLTIP_TOPIC_INTRO_CONTENT": "The intro to your topic will make it easier for participants to get a quick sense of what they'll get involved with.",
       "TITLE_INTRO_TEXT": "Add a brief introduction or call to action, summarising what the topic is for.",
       "TITLE_DESCRIPTION": "Topic text",
-      "TITLE_DESCRIPTION_TEXT": "The main topic content goes here - any instructions, information or context for participants.",
+      "TOOLTIP_TOPIC_TEXT_TITLE": "@:VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION",
+      "TOOLTIP_TOPIC_TEXT_CONTENT": "The main topic content goes here. Add any instructions, information or context that participants may need to engage in the topic.",
       "TITLE_ATTACHMENTS": "@:MODALS.TOPIC_ATTACHMENTS_TITLE_FILES",
       "TOOLTIP_ATTACHMENTS_TITLE": "Attachment guidelines",
       "TOOLTIP_ATTACHMENTS_DESCRIPTION_LIMIT": "A maximum of {{limit}} files can be attached to one topic.",
@@ -3011,7 +3013,8 @@
       "TOOLTIP_TOPIC_INTRO_CONTENT": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_INTRO_CONTENT",
       "TITLE_INTRO_TEXT": "@:VIEWS.TOPIC_CREATE.TITLE_INTRO_TEXT",
       "TITLE_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION",
-      "TITLE_DESCRIPTION_TEXT": "@:VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION_TEXT",
+      "TOOLTIP_TOPIC_TEXT_TITLE": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_TEXT_TITLE",
+      "TOOLTIP_TOPIC_TEXT_CONTENT": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_TEXT_CONTENT",
       "BTN_SECTION_ADD": "@:VIEWS.TOPIC_CREATE.BTN_SECTION_ADD",
       "SETTINGS_HEADING_VISIBILITY": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_VISIBILITY",
       "SETTINGS_VISIBILITY_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_DESC",
