--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2234,6 +2234,8 @@
       "SETTINGS_CATEGORY_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_CATEGORY_SELECT",
       "SETTINGS_HEADING_LOCALITY": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_LOCALITY",
       "SETTINGS_LOCALITY_SELECT_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_LOCALITY_SELECT_DESC",
+      "TOOLTIP_TOPIC_LOCALITY_TITLE": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_LOCALITY_TITLE",
+      "TOOLTIP_TOPIC_LOCALITY_CONTENT": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_LOCALITY_CONTENT",
       "SETTINGS_COUNTRY_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_COUNTRY_SELECT",
       "SETTINGS_LANGUAGE_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_LANGUAGE_SELECT",
       "SETTINGS_HEADING_ADD_TO_GROUP": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_ADD_TO_GROUP",
@@ -2649,6 +2651,8 @@
       "SETTINGS_CATEGORY_SELECT_DESC": "@:VIEWS.GROUP_CREATE.SETTINGS_CATEGORY_SELECT_DESC",
       "SETTINGS_CATEGORY_SELECT": "@:VIEWS.GROUP_CREATE.SETTINGS_CATEGORY_SELECT",
       "SETTINGS_HEADING_LOCALITY": "@:VIEWS.GROUP_CREATE.SETTINGS_HEADING_LOCALITY",
+      "TOOLTIP_TOPIC_LOCALITY_TITLE": "Topic language",
+      "TOOLTIP_TOPIC_LOCALITY_CONTENT": "This gives an indication of the working language of the topic (i.e. the topic text, participant contributions, etc.). The platform language can be set separately by each individual user.",
       "SETTINGS_LOCALITY_SELECT_DESC": "You can assign a country and language to this topic, to make it easier for local people to find.",
       "SETTINGS_COUNTRY_SELECT": "@:VIEWS.GROUP_CREATE.SETTINGS_COUNTRY_SELECT",
       "SETTINGS_LANGUAGE_SELECT": "@:VIEWS.GROUP_CREATE.SETTINGS_LANGUAGE_SELECT",
@@ -3027,6 +3031,8 @@
       "SETTINGS_CATEGORY_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_CATEGORY_SELECT",
       "SETTINGS_HEADING_LOCALITY": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_LOCALITY",
       "SETTINGS_LOCALITY_SELECT_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_LOCALITY_SELECT_DESC",
+      "TOOLTIP_TOPIC_LOCALITY_TITLE": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_LOCALITY_TITLE",
+      "TOOLTIP_TOPIC_LOCALITY_CONTENT": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_LOCALITY_CONTENT",
       "SETTINGS_COUNTRY_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_COUNTRY_SELECT",
       "SETTINGS_LANGUAGE_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_LANGUAGE_SELECT",
       "SETTINGS_HEADING_ADD_TO_GROUP": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_ADD_TO_GROUP",
