--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1620,6 +1620,7 @@
     "GROUP_INVITE_VIEW_LBL_INVITATION_SENT_TO": "Invitation sent to:",
     "GROUP_INVITE_VIEW_LBL_GROUP_LEVEL": "Group rights:",
     "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To access this group, please log in using {{email}}",
+    "GROUP_INVITE_VIEW_EMAIL_INFO":"By joining this group, you agree to your email address being made visible to the group's admin(s).",
     "GROUP_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
     "GROUP_INVITE_VIEW_BTN_GO_TO_LOGIN": "Log in to join group",
     "GROUP_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "You can also:",
@@ -1635,6 +1636,7 @@
     "TOPIC_VOTE_DELEGATE_TAB": "Delegate",
     "TOPIC_VOTE_DELEGATE_BTN_DELEGATE": "Delegate vote",
     "TOPIC_VOTE_DELEGATE_LBL_SEARCH_MEMBERS": "You can only delegate your vote to other participants in this topic. Search for topic participants by their email or username.",
+    "TOPIC_VOTE_DELEGATE_LBL_INFO": "The delegee won’t know you’ve delegated to them, but their vote will be counted twice. You won’t get to see how the delegee voted.",
     "TOPIC_VOTE_DELEGATE_PLACEHOLDER_SEARCH_BY_NAME": "Search by email or username",
     "TOPIC_VOTE_DELEGATE_TXT_PRESS_ENTER_OR_CLICK_TO_ADD": "@:MODALS.TOPIC_SETTINGS_TXT_PRESS_ENTER_OR_CLICK_TO_ADD",
     "TOPIC_VOTE_DELEGATE_TXT_PRESS_ENTER_TO_ADD": "@:MODALS.TOPIC_SETTINGS_TXT_PRESS_ENTER_TO_ADD",
@@ -1732,6 +1734,9 @@
     "TOPIC_MEMBERS_TAB_PARTICIPANTS": "Participants",
     "TOPIC_MEMBERS_TAB_GROUPS": "Groups",
     "TOPIC_MEMBERS_TAB_INVITED": "Invited",
+    "TOPIC_MEMBERS_TOOLTIP_LEVEL_HEADING": "@:VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_TITLE",
+    "TOPIC_MEMBERS_TOOLTIP_LEVEL_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_CONTENT",
+    "TOPIC_MEMBERS_TOOLTIP_LEVEL_INFO": "@:VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_CONTENT_PERMISSIONS_DESC",
     "TOPIC_MEMBERS_PLACEHOLDER_NAME_PERMISSION": "@:VIEWS.MY_TOPICS_TOPICID.PLACEHOLDER_NAME_PERMISSION",
     "TOPIC_MEMBERS_ORDER_BY": "@:VIEWS.GROUP.TOPICS_FILTER_ORDER",
     "TOPIC_MEMBERS_ORDER_BY_NAME_ASC": "@:VIEWS.PUBLIC_GROUP.ORDER_NAME_ASC",
