--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1158,7 +1158,7 @@
       "LBL_OPTION_ALL_VOTES_ARE_IN_DESC": "When every participant in the topic has voted, the voting system closes.",
       "PREVIEW_HEADER": "Vote options preview",
       "PREVIEW_INFO_CHECK": "<b>Check your vote is exactly as you want it!</b> You can't edit or pause a vote once you've started it, and can only start one vote per topic.",
-      "PREVIEW_VOTE_TYPE_MULTIPLE": "This is a multiple selection voting. The maximum amount of options you can choose: {{maxOptions}}.",
+      "PREVIEW_VOTE_TYPE_MULTIPLE": "This is a multiple selection voting. Please choose {{range}} options.",
       "PREVIEW_VOTE_TYPE_REGULAR": "This is a single selection vote",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "BTN_CONTINUE": "@:BTN_CONTINUE",
@@ -1209,7 +1209,7 @@
       "LBL_OPTION_ALL_VOTES_ARE_IN": "All votes are in",
       "LBL_OPTION_ALL_VOTES_ARE_IN_DESC": "When every participant in the topic has voted, the voting system closes.",
       "PREVIEW_HEADER": "Voting options preview",
-      "PREVIEW_VOTE_TYPE_MULTIPLE": "This is a multiple selection voting. The maximum amount of options you can choose: {{maxOptions}}.",
+      "PREVIEW_VOTE_TYPE_MULTIPLE": "This is a multiple selection voting. Please choose {{range}} options.",
       "PREVIEW_VOTE_TYPE_REGULAR": "This is a single selection voting",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "BTN_CONTINUE": "@:BTN_CONTINUE",
@@ -2817,7 +2817,7 @@
       "VOTE_LBL_SET_VOTE_REMINDER": "Automatic reminder for users",
       "VOTE_LBL_SET_VOTE_REMINDER_EXPLANATION": "You can set an automatic reminder email for users a few days before the end of the voting",
       "VOTE_SUBMIT": "Submit your vote",
-      "TXT_YOU_CAN_CHOOSE_OPTIONS": "This is a multiple selection voting. You can choose max {{maxChoices}} options that align with your view.",
+      "TXT_YOU_CAN_CHOOSE_OPTIONS": "This is a multiple selection voting. Please choose {{range}} options.",
       "MSG_CHOOSE_AT_LEAST_OPTIONS": "You need to choose at least {{optionsCount}} options",
       "VOTE_TXT_DESCRIPTION_CHOICE_RANGE": "Define the max amount of choices a person can vote for. For example, you have 4 choices but you allow people to choose up to 2 out of them. You can only add as many as you have choices to choose from.",
       "VOTE_LBL_MIN_CHOICES": "Min choices:",
