--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1290,6 +1290,9 @@
       "EMAIL_DESC_LONG": "@:COMPONENTS.GROUP_INVITE.EMAIL_DESC_LONG",
       "PLACEHOLDER_SEARCH": "@:COMPONENTS.GROUP_INVITE.PLACEHOLDER_SEARCH",
       "SELECT_TO_ADD": "@:COMPONENTS.GROUP_INVITE.SELECT_TO_ADD",
+      "NAME": "@:COMPONENTS.GROUP_INVITE.NAME",
+      "ROLE": "@:COMPONENTS.GROUP_INVITE.ROLE",
+      "ACTIONS": "@:COMPONENTS.GROUP_INVITE.ACTIONS",
       "SHOW_PER_PAGE": "@:VIEWS.ACCOUNT.SHOW_PER_PAGE",
       "INVALID_EMAILS_HEADER": "@:COMPONENTS.GROUP_INVITE.INVALID_EMAILS_HEADER",
       "NO_INVITES_HEADING": "@:COMPONENTS.GROUP_INVITE.NO_INVITES_HEADING",
