--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2106,8 +2106,8 @@
       "BTN_OPTION_EDIT": "Edit group",
       "BTN_REQUEST_ADD_TOPICS": "Request to add topics",
       "BTN_OPTION_ADD_TOPICS": "Add topics",
-      "TITLE_ADD_OR_CREATE": "Add or create a topic",
-      "BTN_ADD_OR_CREATE_TOPICS": "Add or create a topic",
+      "TITLE_ADD_OR_CREATE": "Create a topic",
+      "BTN_ADD_OR_CREATE_TOPICS": "Create a topic",
       "BTN_VIEW_TOPIC_REQUESTS": "View topic requests",
       "HEADING_CREATE_A_NEW_TOPIC": "Create a new topic",
       "BTN_OPTION_REPORT": "Report to admin",
