--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,8 +2,8 @@
   "MSG_REDESIGN_TITLE": "We’re redesigning our platform!",
   "MSG_REDESIGN_CONTENT": "In the coming months, we’ll be starting to roll out a new and improved Citizen OS! Any questions, concerns, or to offer your help as a beta tester, contact Sara on <a href=\"mailto:info@citizenos.com\">info@citizenos.com</a>",
   "MSG_REDESIGN_BTN_CLOSE": "OK, got it",
-  "META_DEFAULT_TITLE": "Citizen OS - an e-decisionmaking platform for communities.",
-  "META_DEFAULT_DESCRIPTION": "Citizen OS enables participative idea-gathering, discussion and voting for groups, when getting together offline or online at the same time is not an option.",
+  "META_DEFAULT_TITLE": "Citizen OS - a free participation platform for civil society.",
+  "META_DEFAULT_DESCRIPTION": "Citizen OS helps you gather ideas, discuss, vote, and make decisions together.",
   "META_DEFAULT_KEYWORDS": "e-decisionmaking, e-governance, e-democracy, democracy, direct democracy, liquid democracy",
   "BTN_YES": "YES",
   "BTN_NO": "NO",
