--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1357,6 +1357,13 @@
     "TOPIC_EDIT_DISABLED_INFO": "You can still edit settings",
     "TOPIC_EDIT_DISABLED_BTN_SETTINGS": "View settings",
     "TOPIC_EDIT_DISABLED_LNK_CANCEL": "@:LNK_CANCEL",
+    "TOPIC_SETTINGS_LOCKED_HEADING": "These settings are now locked",
+    "TOPIC_SETTINGS_LOCKED_DESCRIPTION": "It is no longer possible to edit these settings.",
+    "TOPIC_SETTINGS_LOCKED_WHY": "Why?",
+    "TOPIC_SETTINGS_LOCKED_WHY_DESCRIPTION": "The topic is now in 'Action' phase, which means all previous phases are closed. It is not possible to edit the settings for a phase which is closed.",
+    "TOPIC_SETTINGS_LOCKED_INFO": "You can still edit the overall topic settings.",
+    "TOPIC_SETTINGS_LOCKED_BTN_SETTINGS": "@:MODALS.TOPIC_EDIT_DISABLED_BTN_SETTINGS",
+    "TOPIC_SETTINGS_LOCKED_LNK_CANCEL": "@:LNK_CANCEL",
     "TOPIC_SETTINGS_DISABLED_HEADING": "Settings are locked",
     "TOPIC_SETTINGS_DISABLED_DESCRIPTION": "The settings for this topic are locked for your role.",
     "TOPIC_SETTINGS_DISABLED_WHY": "@:MODALS.TOPIC_EDIT_DISABLED_WHY",
