--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -412,7 +412,7 @@
       "MESSAGE_PLACEHOLDER": "Write your message here",
       "CHARACTER_LIMIT": "Character limit:",
       "EMAIL_DESC": "Invite people via their name or email address",
-      "EMAIL_DESC_LONG": "Add up to 50 emails at once, with a space or comma between each",
+      "EMAIL_DESC_LONG": "Add up to 50 emails at once, with a space or comma between each. Inviting lots of people? Try using the share link.",
       "PLACEHOLDER_SEARCH": "@:DEFAULT.NAV_MOBILE.BTN_SEARCH",
       "SHOW_PER_PAGE": "@:VIEWS.ACCOUNT.SHOW_PER_PAGE",
       "NO_INVITES_HEADING": "You haven’t invited anyone yet",
