--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1526,7 +1526,7 @@
     "TOPIC_DELETE_REPLY_TXT_ARE_YOU_SURE": "Are you sure you want to delete this reply? You cannot undo this action.",
     "TOPIC_DELETE_REPLY_BTN_NO": "@:MODALS.TOPIC_ARGUMENT_REPORT_BTN_NO",
     "TOPIC_DELETE_REPLY_BTN_YES": "Yes, delete this reply",
-    "LOGIN_HEADING": "Log in to Citizen OS",
+    "LOGIN_HEADING": "Please log in to Citizen OS to continue",
     "LOGIN_EMAIL_HEADING": "Log in with email",
     "LOGIN_BTN_LOGIN_FACEBOOK": "Log in with Facebook account",
     "LOGIN_BTN_LOGIN_GOOGLE": "Log in with Google account",
