--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2017,7 +2017,7 @@
       "NEWS_HEADER": "Citizen OS news",
       "NEWS_LNK_VIEW_ALL": "View all news",
       "HELP_US_HEADER": "Help us build the best participation platform!",
-      "HELP_US_LNK_SHARE_STORY": "Share your Citizen OS Story",
+      "HELP_US_LNK_SHARE_STORY": "Share your case study with us",
       "HELP_US_LNK_KEEP_PLATFORM_FREE": "Help us keep the platform free",
       "HELP_US_LNK_VOLUNTEER_TO_TRANSLATE": "Volunteer to translate",
       "PUBLIC_TOPICS_HEADER": "Recent public topics",
