update topic 7 step

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -878,9 +878,16 @@
       "TOPIC_STEP_6_TITLE": "Topic text",
       "TOPIC_STEP_6_DESC": "The topic text is the basis for the idea gathering and/or discussion and voting. The main background information will be shared here.",
       "TOPIC_STEP_6_DESC2": "By default, we will keep this collapsed, but you can expand it at any time to read the entire text.",
-      "TOPIC_STEP_7_TITLE": "Topic discussion",
-      "TOPIC_STEP_7_DESC": "The main discussion will take place here. Anyone can post a pro or con argument, or provide some additional information.",
-      "TOPIC_STEP_7_DESC2": "Other participants can agree or disagree with arguments, and post replies or reactions.",
+      "TOPIC_STEP_7_TITLE": "Engagement space",
+      "TOPIC_STEP_7_DESC": "The main engagement takes place here. Participants can share their views and interact with each other.",
+      "TOPIC_STEP_7_LBL_DISCUSSION": "Discussion:",
+      "TOPIC_STEP_7_DESC_DISCUSSION": "When the topic is in a 'discussion' phase, this is where anyone can post pro or con arguments, provide additional information, and reply to or like each other's arguments.",
+      "TOPIC_STEP_7_LBL_IDEATION": "Idea gathering:",
+      "TOPIC_STEP_7_DESC_IDEATION": "When the topic is in an 'ideas' phase, this is where participants can add ideas, and reply to or like each other's ideas.",
+      "TOPIC_STEP_7_LBL_VOTE": "Voting:",
+      "TOPIC_STEP_7_DESC_VOTE": "When the topic is in a 'voting' phase, this is where participants can cast their votes and see the results once it's ended.",
+      "TOPIC_STEP_7_LBL_FOLLOW_UP": "Action:",
+      "TOPIC_STEP_7_DESC_FOLLOW_UP": "When the topic is in an 'action' phase, this is where topic admins can post updates about actions taken as a result of the decision.",
       "TOPIC_STEP_8_TITLE": "Topic interactions",
       "HEADING_TOPIC_MOBILE": "@:COMPONENTS.TOUR.HEADING_TOPIC",
       "TOPIC_MOBILE_STEP_1_TITLE": "Topic navigation",
