--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -635,7 +635,7 @@
       "DESCRIPTION": "As this is your first time on the newly redesigned Citizen OS dashboard, we recommend you take the walkthrough tour to get to know the platform better.",
       "TAKE_A_TOUR": "The walkthrough only takes a couple of minutes.",
       "BTN_SUBMIT": "Take the tour",
-      "BTN_CANCEL": "Skip"
+      "BTN_CANCEL": "Close"
     },
     "PASSWORD_FORGOT": {
       "PLACEHOLDER_EMAIL": "@:COMPONENTS.LOGIN_FORM.LOGIN_PLACEHOLDER_EMAIL",
