--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -462,6 +462,7 @@
       "NOTIFICATION_LNK_VIEW": "View anyway"
     },
     "IDEA_DIALOG": {
+      "TOOLTIP_REPLIES_DISABLED": "Replies are turned off",
       "BTN_REPLY": "@:COMPONENTS.ARGUMENT.BTN_REPLY",
       "OPTION_EDIT": "@:COMPONENTS.IDEABOX.OPTION_EDIT",
       "OPTION_FAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_FAVOURITE",
@@ -2289,6 +2290,10 @@
       "DEADLINE_TIME_OPTION_PM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_PM",
       "DEADLINE_LBL_TIMEZONE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIMEZONE",
       "SETTINGS_IDEATION_DEADLINE_PLACEHOLDER": "Select a date",
+      "SETTINGS_HEADING_ADVANCED_SETTINGS": "Advanced settings",
+      "SETTINGS_HEADING_ADVANCED_SETTINGS_DESC": "Further options to customise the idea gathering phase.",
+      "LBL_DISABLE_REPLIES": "Replies are turned: {{value}}",
+      "LBL_DISABLE_REPLIES_DESC": "Disable replies to ideas",
       "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point prior to starting a vote.",
       "BTN_IDEATION_ACTIONS": "Manage idea gathering",
       "NO_IDEAS_HEADING": "There are no ideas yet",
