--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1727,6 +1727,7 @@
     "PRIVACY_POLICY_DESCRIPTION_NEW_USER": "Thanks for creating an account! Before you continue, please take a moment to read and accept our Terms of Use and Privacy Policy",
     "PRIVACY_POLICY_LNK_TERMS_OF_USE": "Terms of use",
     "PRIVACY_POLICY_LNK_PRIVACY_POLICY": "Privacy Policy",
+    "PRIVACY_POLICY_LNK_ARTICLES_OF_ASSOCIATION": "Articles of Association",
     "PRIVACY_POLICY_BTN_REJECT": "Reject",
     "PRIVACY_POLICY_BTN_ACCEPT": "Accept",
     "USER_DELETE_CONFIRM_HEADING": "Delete account",
@@ -1982,6 +1983,8 @@
       "TAB_ACCOUNT": "Account",
       "LBL_SHOW_IN_SEARCH": "Show my username in search results",
       "LBL_SHOW_IN_SEARCH_DESCRIPTION": "Display my username in invite search results so that other people can easily invite me to groups and topics",
+      "LBL_LINKS_TITLE": "Links",
+      "LBL_LINKS_DESCRIPTION": "If necessary, you can consult our legal documentation.",
       "LBL_DELETE_ACCOUNT": "Delete your account",
       "LBL_DELETE_ACCOUNT_DESCRIPTION": "When deleting your account all your contributions will stay visible in Citizen OS, but they will not be linked to your account anymore.",
       "LBL_PROFILE_LANGUAEG": "Set your profile language",
