--- a/src/assets/i18n/mk.json
+++ b/src/assets/i18n/mk.json
@@ -1090,7 +1090,7 @@
     "GROUP_INVITE_VIEW_LBL_INVITED_BY": "Испраќач на поканата:",
     "GROUP_INVITE_VIEW_LBL_INVITATION_SENT_TO": "Примач на пораката:",
     "GROUP_INVITE_VIEW_LBL_GROUP_LEVEL": "Вашите права во групата:",
-    "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To access this group, please log in using {{email}}",
+    "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To join this group, please log in using {{email}}",
     "GROUP_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
     "GROUP_INVITE_VIEW_BTN_GO_TO_LOGIN": "@:MODALS.TOPIC_INVITE_VIEW_BTN_GO_TO_LOGIN",
     "GROUP_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "Можете исто така:",
@@ -1149,7 +1149,7 @@
     "TOPIC_INVITE_VIEW_LBL_INVITATION_SENT_TO": "Примач на пораката:",
     "TOPIC_INVITE_VIEW_LBL_TOPIC_LEVEL": "Права на темата:",
     "TOPIC_INVITE_VIEW_TXT_COMPLETE_ACCOUNT": "<b>Heads up!</b> You must finish creating your account with {{email}} to access this topic",
-    "TOPIC_INVITE_VIEW_BTN_LOGIN_AS": "To access this topic, please log in using {{email}}",
+    "TOPIC_INVITE_VIEW_BTN_LOGIN_AS": "To join this topic, please log in using {{email}}",
     "TOPIC_INVITE_VIEW_BTN_GO_TO_LOGIN": "@:MODALS.LOGIN_BTN_LOGIN",
     "TOPIC_INVITE_VIEW_BTN_COMPLETE_ACCOUNT": "Креирај сметка",
     "TOPIC_INVITE_VIEW_BTN_ACCEPT": "@:MODALS.PRIVACY_POLICY_BTN_ACCEPT",
