--- a/src/assets/i18n/cs.json
+++ b/src/assets/i18n/cs.json
@@ -1643,7 +1643,7 @@
     "GROUP_INVITE_VIEW_LBL_INVITED_BY": "Pozván:",
     "GROUP_INVITE_VIEW_LBL_INVITATION_SENT_TO": "Pozvánka odeslána:",
     "GROUP_INVITE_VIEW_LBL_GROUP_LEVEL": "Práva skupiny:",
-    "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To access this group, please log in using {{email}}",
+    "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To join this group, please log in using {{email}}",
     "GROUP_INVITE_VIEW_EMAIL_INFO": "By joining this group, you agree to your email address being made visible to the group's admin(s).",
     "GROUP_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
     "GROUP_INVITE_VIEW_BTN_GO_TO_LOGIN": "Log in to join group",
