--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -1090,7 +1090,7 @@
     "GROUP_INVITE_VIEW_LBL_INVITED_BY": "招待者：",
     "GROUP_INVITE_VIEW_LBL_INVITATION_SENT_TO": "招待の送信先:",
     "GROUP_INVITE_VIEW_LBL_GROUP_LEVEL": "グループへの権限:",
-    "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To access this group, please log in using {{email}}",
+    "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To join this group, please log in using {{email}}",
     "GROUP_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
     "GROUP_INVITE_VIEW_BTN_GO_TO_LOGIN": "@:MODALS.TOPIC_INVITE_VIEW_BTN_GO_TO_LOGIN",
     "GROUP_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "さらに：",
@@ -1149,7 +1149,7 @@
     "TOPIC_INVITE_VIEW_LBL_INVITATION_SENT_TO": "招待の受信者:",
     "TOPIC_INVITE_VIEW_LBL_TOPIC_LEVEL": "トピック権限:",
     "TOPIC_INVITE_VIEW_TXT_COMPLETE_ACCOUNT": "<b>Heads up!</b> You must finish creating your account with {{email}} to access this topic",
-    "TOPIC_INVITE_VIEW_BTN_LOGIN_AS": "To access this topic, please log in using {{email}}",
+    "TOPIC_INVITE_VIEW_BTN_LOGIN_AS": "To join this topic, please log in using {{email}}",
     "TOPIC_INVITE_VIEW_BTN_GO_TO_LOGIN": "@:MODALS.LOGIN_BTN_LOGIN",
     "TOPIC_INVITE_VIEW_BTN_COMPLETE_ACCOUNT": "アカウントを作成",
     "TOPIC_INVITE_VIEW_BTN_ACCEPT": "@:MODALS.PRIVACY_POLICY_BTN_ACCEPT",
