--- a/src/assets/i18n/lt.json
+++ b/src/assets/i18n/lt.json
@@ -418,7 +418,7 @@
     "GROUP_INVITE_VIEW_LBL_INVITED_BY": "Invited by:",
     "GROUP_INVITE_VIEW_LBL_INVITATION_SENT_TO": "Invitation sent to:",
     "GROUP_INVITE_VIEW_LBL_GROUP_LEVEL": "Group rights:",
-    "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To access this group, please log in using {{email}}",
+    "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To join this group, please log in using {{email}}",
     "GROUP_INVITE_VIEW_BTN_GO_TO_LOGIN": "@:MODALS.TOPIC_INVITE_VIEW_BTN_GO_TO_LOGIN",
     "GROUP_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "You can also:",
     "GROUP_INVITE_VIEW_LNK_LEARN_MORE": "Learn more about Citizen OS if you're new!",
@@ -474,7 +474,7 @@
     "TOPIC_INVITE_VIEW_LBL_INVITATION_SENT_TO": "Invitation sent to:",
     "TOPIC_INVITE_VIEW_LBL_TOPIC_LEVEL": "Topic rights:",
     "TOPIC_INVITE_VIEW_TXT_COMPLETE_ACCOUNT": "<b>Heads up!</b> You must complete creating your account with {{email}} to access this topic",
-    "TOPIC_INVITE_VIEW_BTN_LOGIN_AS": "To access this topic, please log in using {{email}}",
+    "TOPIC_INVITE_VIEW_BTN_LOGIN_AS": "To join this topic, please log in using {{email}}",
     "TOPIC_INVITE_VIEW_BTN_GO_TO_LOGIN": "@:MODALS.LOGIN_BTN_LOGIN",
     "TOPIC_INVITE_VIEW_BTN_COMPLETE_ACCOUNT": "Create account",
     "TOPIC_INVITE_VIEW_BTN_ACCEPT": "@:MODALS.PRIVACY_POLICY_BTN_ACCEPT",
