FIX edit and add idea forms info notification

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -342,6 +342,9 @@
     },
     "EDIT_IDEA": {
       "FOOTER_FORM_TITLE": "Edit idea",
+      "FOOTER_FORM_ANONYMOUS_INFO": "@:COMPONENTS.ADD_IDEA.FOOTER_FORM_ANONYMOUS_INFO",
+      "TOOLTIP_ANONYMOUS_TITLE": "@:COMPONENTS.ADD_IDEA.TOOLTIP_ANONYMOUS_TITLE",
+      "TOOLTIP_ANONYMOUS_DESCRIPTION": "@:COMPONENTS.ADD_IDEA.TOOLTIP_ANONYMOUS_DESCRIPTION",
       "PLACEHOLDER_ADD_STATEMENT_TO_IDEA": "@:COMPONENTS.ADD_IDEA.PLACEHOLDER_ADD_STATEMENT_TO_IDEA",
       "SUBJECT_CHARACTERS_LEFT": "@:COMPONENTS.ADD_IDEA.SUBJECT_CHARACTERS_LEFT",
       "IDEA_TYPE_CHARACTER_LIMIT": "@:COMPONENTS.ADD_IDEA.IDEA_TYPE_CHARACTER_LIMIT",
