update topic invitation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -536,6 +536,7 @@
     "TOPIC_JOIN": {
       "HEADING": "Join topic",
       "MESSAGE_MAIN": "You want to join",
+      "TOPIC_CREATED_BY": "Topic created by",
       "MESSAGE_DESCRIPTION": "Are you sure you want to join the topic? See the explanation below for what this means. You can always easily leave a topic if you want to.",
       "HEADING_WHAT_CAN_YOU_DO": "What you can do once you join a topic",
       "ITEM_PARTICIPATE": "Participate in the topic, giving your view and engaging with others",
@@ -631,7 +632,7 @@
       "HEADING_DISCUSSION_QUESTION": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_QUESTION",
       "DISCUSSION_QUESTION_PLACEHOLDER": "@:VIEWS.TOPIC_CREATE.SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER",
       "HEADING_DISCUSSION_DEADLINE": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE",
-      "LNK_CANCEL":"@:LNK_CANCEL",
+      "LNK_CANCEL": "@:LNK_CANCEL",
       "BTN_START_DISCUSSION": "@:BTN_CONTINUE"
     },
     "NOTIFICATION": {
@@ -991,7 +992,7 @@
       "SETTINGS_HEADING_DISCUSSION_DEADLINE": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC",
       "LNK_CANCEL": "@:LNK_CANCEL",
-      "BTN_CONTINUE":"Continue",
+      "BTN_CONTINUE": "Continue",
       "BTN_START_DISCUSSION": "Start discussion phase"
     },
     "TOPIC_INVITE": {
@@ -1167,7 +1168,7 @@
       "LBL_CHOOSE_VOTING_END_DESC": "You can choose either a deadline or vote amount, or combine them. When you combine them, the first that is reached will end voting.",
       "LBL_OPTION_DEADLINE": "Include voting deadline",
       "LBL_OPTION_DEADLINE_DESC": "When the set date is reached, the voting is closed.",
-      "LBL_TIMEZONE":"@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
+      "LBL_TIMEZONE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
       "DEADLINE_LBL_TIME": "Time",
       "DEADLINE_TIME_OPTION_24": "24h clock",
       "DEADLINE_TIME_OPTION_AM": "AM",
@@ -1655,7 +1656,7 @@
     "GROUP_INVITE_VIEW_LBL_INVITATION_SENT_TO": "Invitation sent to:",
     "GROUP_INVITE_VIEW_LBL_GROUP_LEVEL": "Group rights:",
     "GROUP_INVITE_VIEW_BTN_LOGIN_AS": "To join this group, please log in using {{email}}",
-    "GROUP_INVITE_VIEW_EMAIL_INFO":"By joining this group, you agree to your email address being made visible to the group's admin(s).",
+    "GROUP_INVITE_VIEW_EMAIL_INFO": "By joining this group, you agree to your email address being made visible to the group's admin(s).",
     "GROUP_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
     "GROUP_INVITE_VIEW_BTN_GO_TO_LOGIN": "Log in to join group",
     "GROUP_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "You can also:",
@@ -2196,11 +2197,11 @@
       "MEMBERS_TABLE_HEADER_NAME": "Name",
       "MEMBERS_TABLE_HEADER_LAST_ACTIVITY": "Last activity",
       "MEMBERS_TABLE_HEADER_PERMISSIONS": "Permission",
-      "ROLE":"@:COMPONENTS.GROUP_INVITE.ROLE",
-      "NAME":"@:COMPONENTS.GROUP_INVITE.NAME",
-      "ACTIONS":"@:COMPONENTS.GROUP_INVITE.ACTIONS",
-      "TOOLTIP_MEMBERS_PERMISSIONS_HEADING":"Group roles",
-      "TOOLTIP_MEMBERS_PERMISSIONS_DESCRIPTION":"<b>Admins</b> can access all settings to manage the group. <b>Members</b> can access the topics to which the group has been invited, with whatever rights they have been assigned for each topic. In public groups, members can also invite and share the group.",
+      "ROLE": "@:COMPONENTS.GROUP_INVITE.ROLE",
+      "NAME": "@:COMPONENTS.GROUP_INVITE.NAME",
+      "ACTIONS": "@:COMPONENTS.GROUP_INVITE.ACTIONS",
+      "TOOLTIP_MEMBERS_PERMISSIONS_HEADING": "Group roles",
+      "TOOLTIP_MEMBERS_PERMISSIONS_DESCRIPTION": "<b>Admins</b> can access all settings to manage the group. <b>Members</b> can access the topics to which the group has been invited, with whatever rights they have been assigned for each topic. In public groups, members can also invite and share the group.",
       "MEMBERS_TABLE_HEADER_ACTIONS": "@:DEFAULT.NAV_MOBILE.BTN_SETTINGS",
       "MEMBERS_BTN_BULK_ACTIONS": "@:COMPONENTS.GROUP_INVITE.BTN_BULK_ACTIONS",
       "BULK_OPT_SET_ALL_RIGHTS": "@:COMPONENTS.GROUP_INVITE.BULK_OPT_SET_ALL_RIGHTS",
@@ -2346,7 +2347,7 @@
       "ERROR_MISSING_QUESTION": "Idea gathering question is required!",
       "ERROR_AT_LEAST_TWO_OPTIONS_REQUIRED": "@:MSG_ERROR_POST_API_USERS_TOPICS_VOTES_40001",
       "SUCCESS_IDEATION_STARTED": "Idea gathering has successfully been started",
-      "CO_EDITORS_TITLE":"@:VIEWS.TOPIC_CREATE.CO_EDITORS_TITLE",
+      "CO_EDITORS_TITLE": "@:VIEWS.TOPIC_CREATE.CO_EDITORS_TITLE",
       "CO_EDITORS_LNK_MANAGE": "@:VIEWS.TOPIC_CREATE.CO_EDITORS_LNK_MANAGE",
       "CO_EDITORS_LBL_JOINED": "@:VIEWS.TOPIC_CREATE.CO_EDITORS_LBL_JOINED",
       "CO_EDITORS_LBL_INVITED": "@:VIEWS.TOPIC_CREATE.CO_EDITORS_LBL_INVITED"
@@ -2678,7 +2679,7 @@
       "TITLE_HEADING": "Title",
       "TITLE_INTRO": "Intro",
       "TOOLTIP_ADD_TO_GROUP": "Who can add topics",
-      "TOOLTIP_ADD_TO_GROUP_CONTENT":"In a private group, anyone can add topics. In a public group, only admins can add topics, but anyone can 'Request to add topics' via the button on the group's page.",
+      "TOOLTIP_ADD_TO_GROUP_CONTENT": "In a private group, anyone can add topics. In a public group, only admins can add topics, but anyone can 'Request to add topics' via the button on the group's page.",
       "TOOLTIP_TOPIC_INTRO_TITLE": "@:VIEWS.TOPIC_CREATE.TITLE_INTRO",
       "TOOLTIP_TOPIC_INTRO_CONTENT": "The intro to your topic will make it easier for participants to get a quick sense of what they'll get involved with.",
       "TITLE_INTRO_TEXT": "Add a brief introduction or call to action, summarising what the topic is for.",
@@ -2730,7 +2731,7 @@
       "SETTINGS_HEADING_DISCUSSION_DEADLINE": "Discussion deadline",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "You can opt to include a deadline, which will close the discussion automatically when reached. You can always edit the deadline, or manually close the discussion at any time.",
       "LBL_OPTION_DEADLINE": "Include discussion deadline",
-      "LBL_TIMEZONE":"@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
+      "LBL_TIMEZONE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
       "DEADLINE_LBL_TIME": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME",
       "DEADLINE_TIME_OPTION_24": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_24",
       "DEADLINE_TIME_OPTION_AM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_AM",
